--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -13,4 +13,6 @@
     <li><strong>Genres with F:</strong> {{ num_genre_f }}</li>
     <li><strong>Books with S:</strong> {{ num_books_s }}</li>
   </ul>
+
+  <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.</p>
 {% endblock %}
