added image, form, and styled buttons

--- a/capstone/website/templates/index.html
+++ b/capstone/website/templates/index.html
@@ -1,17 +1,23 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<div >
-    <h1>Patient Heart Failure Screening</h1>
-    <p>This portal serves as a way to assist medical practitioners, with the help of machine learning, in screening their patients for possible <b>Heart Failure</b>!</p>
+<div class="">
+    <div class="text-primary">
+        <h1>Patient Heart Failure Screening</h1>
+        <p>This portal serves as a way to assist medical practitioners, with the help of machine learning, in screening their patients for possible <b>Heart Failure</b>!</p>
+    </div>
+      <br>
+      <div class="d-flex justify-content-center">
+        {% load static %}
+        <img src="{% static 'images/heart.jpg' %}" alt="Heart Photo" style="width:250px;height:250px;">
+      </div>
+    
+      <br>
+      <h2>Patient Content</h2>
+      <p>As of now, <b>{{ num_patients }}</b> individuals have been screened for heart failure using our software!</p>
+      <br>
+      <br>
+      <a href="{% url 'patient-create' %}"><button type="button" class="btn-lg btn-outline-primary">Predict Heart Disease</button></a>
 </div>
-  <br>
-  <br>
-  <h2>Patient Content</h2>
-  <p>As of now, {{ num_patients }} have been screened for heart failure using our software!</p>
-  <br>
-  <br>
-  <button><a href="{% url 'index' %}">Add Patient Info</a></button>
 
-  
 {% endblock %}
