--- a/capstone/website/templates/base_generic.html
+++ b/capstone/website/templates/base_generic.html
@@ -15,9 +15,17 @@
       <div class="col-sm-2">
       {% block sidebar %}
         <ul class="sidebar-nav">
-          <li><a href="{% url 'index' %}">Home</a></li>
+          <li><a href="{% url 'index' %}" class="btn btn-primary" role="button">Home</a></li>
         </ul>
      {% endblock %}
+     <ul class="sidebar-nav">
+      {% if user.is_authenticated %}
+       <li><b>Logged In As:</b> {{ user.get_username }}</li>
+       <li><a href="{% url 'logout'%}?next={{request.path}}" class="btn btn-danger btn-sm" role="button">Logout</a></li>
+      {% else %}
+       <li><a href="{% url 'login'%}?next={{request.path}}" class="btn btn-primary btn-sm" role="button">Login</a></li>
+     {% endif %}
+      </ul>  
       </div>
       <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
     </div>
