--- a/capstone/website/templates/base_generic.html
+++ b/capstone/website/templates/base_generic.html
@@ -12,12 +12,10 @@
 <body>
   <div class="container-fluid">
     <div class="row">
+      <div style="background-color:rgb(170, 173, 179);border-radius:20px;padding:10px;margin-top: 10px;">
       <div class="col-sm-2">
-      {% block sidebar %}
-        <ul class="sidebar-nav">
-          <li><a href="{% url 'index' %}" class="btn btn-primary" role="button">Home</a></li>
-        </ul>
-     {% endblock %}
+        
+          <a href="{% url 'index' %}" class="btn btn-primary" role="button">Home</a>
      <ul class="sidebar-nav">
       {% if user.is_authenticated %}
        <li><b>Logged In As:</b> {{ user.get_username }}</li>
@@ -27,7 +25,8 @@
      {% endif %}
       </ul>  
       </div>
-      <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+      </div>
+      <div class="col-sm-10">{% block content %}{% endblock %}</div>
     </div>
   </div>
 </body>
