test accuracy functionality added

--- a/capstone/website/templates/index.html
+++ b/capstone/website/templates/index.html
@@ -32,11 +32,13 @@
 <div class="p-2 d-flex flex-column" style="background-color:burlywood; border-radius:20px; padding:20px; margin-top: 10px; margin-left:2px;width: 500px; align-items: center;">
   <div style="background-color:aliceblue; padding:10px;border-radius:10px;width: 400px; text-align: center; margin:10px">
     <h2>Data Visualization</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto quas explicabo sit consequatur quia? Magni, quibusdam, architecto autem voluptatem omnis cupiditate quidem sit harum nostrum expedita perspiciatis. Rem, cum deserunt.</p>
+    <p>View visuals with explanations and information about each</p>
+    <a href="{% url 'visual' %}" role="button" class="btn btn-primary btn-lg">Visuals</a>
   </div>
   <div style="background-color:aliceblue; padding:10px;border-radius:10px;width: 400px; text-align: center; margin:10px">
-    <h2>Data Visualization</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto quas explicabo sit consequatur quia? Magni, quibusdam, architecto autem voluptatem omnis cupiditate quidem sit harum nostrum expedita perspiciatis. Rem, cum deserunt.</p>
+    <h2>Data Accuracy Test</h2>
+    <p>View accuracy information</p>
+    <a href="{% url 'accuracy' %}" role="button" class="btn btn-primary btn-lg">Accuracy Test</a>
   </div>
 </div>
 
