--- a/capstone/website/templates/base_generic.html
+++ b/capstone/website/templates/base_generic.html
@@ -13,17 +13,14 @@
   <div class="container-fluid">
     <div class="row">
       <div style="background-color:rgb(170, 173, 179);border-radius:20px;padding:10px;margin-top: 10px;">
-      <div class="col-sm-2">
-        
-          <a href="{% url 'index' %}" class="btn btn-primary" role="button">Home</a>
-     <ul class="sidebar-nav">
-      {% if user.is_authenticated %}
-       <li><b>Logged In As:</b> {{ user.get_username }}</li>
-       <li><a href="{% url 'logout'%}?next={{request.path}}" class="btn btn-danger btn-sm" role="button">Logout</a></li>
-      {% else %}
-       <li><a href="{% url 'login'%}?next={{request.path}}" class="btn btn-primary btn-sm" role="button">Login</a></li>
-     {% endif %}
-      </ul>  
+      <div class="col-sm-2" style="height:600px;width:150px;align-items: center;text-align: center;"> 
+        <a href="{% url 'index' %}" class="btn btn-primary" role="button">Home</a>
+        {% if user.is_authenticated %}
+        <b>Logged In As:</b> {{ user.get_username }}
+        <a href="{% url 'logout'%}?next={{request.path}}" class="btn btn-danger btn-sm" role="button">Logout</a>
+        {% else %}
+        <a href="{% url 'login'%}?next={{request.path}}" class="btn btn-primary btn-sm" role="button">Login</a>
+        {% endif %}
       </div>
       </div>
       <div class="col-sm-10">{% block content %}{% endblock %}</div>
