--- a/capstone/website/templates/base_generic.html
+++ b/capstone/website/templates/base_generic.html
@@ -11,17 +11,15 @@
 </head>
 <body>
   <div class="container-fluid">
-    <div class="row">
-      <div style="background-color:rgb(170, 173, 179);border-radius:20px;padding:10px;margin-top: 10px;">
-      <div class="col-sm-2" style="height:600px;width:150px;align-items: center;text-align: center;"> 
-        <a href="{% url 'index' %}" class="btn btn-primary" role="button">Home</a>
+    <div class="row" style="margin-left:1px;margin-top:10px;">
+      <div class="col-sm-2 d-flex flex-column" style="height:600px;width:100px;align-items: center;padding:10px;background-color:grey;border-radius:20px;"> 
+        <a href="{% url 'index' %}" class="btn btn-primary" role="button" style="margin-top:15px;">Home</a>
         {% if user.is_authenticated %}
         <b>Logged In As:</b> {{ user.get_username }}
         <a href="{% url 'logout'%}?next={{request.path}}" class="btn btn-danger btn-sm" role="button">Logout</a>
         {% else %}
-        <a href="{% url 'login'%}?next={{request.path}}" class="btn btn-primary btn-sm" role="button">Login</a>
+        <a href="{% url 'login'%}?next={{request.path}}" class="btn btn-primary btn-sm" role="button" style="margin:10px">Login</a>
         {% endif %}
-      </div>
       </div>
       <div class="col-sm-10">{% block content %}{% endblock %}</div>
     </div>
