more changes to visuals and data analysis

--- a/capstone/website/templates/base_generic.html
+++ b/capstone/website/templates/base_generic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <title>Heart Failure</title>
 <head>
   {% block title %}<title>Local Library</title>{% endblock %}
   <meta charset="utf-8">
